TLAB-441 Replace metro line in sidebar with scrollbar, minor fixes to responsivity and layout, align header with padded content

--- a/themes/trafiklab-2024/assets/sass/_header.scss
+++ b/themes/trafiklab-2024/assets/sass/_header.scss
@@ -11,8 +11,19 @@ header.site-header {
   z-index: 200;
   background-color: white;
 
-  img.brand {
+  li.brand {
+    width: 80px;
+    background-color: #000;
     height: $header-content-height;
+
+    a {
+      padding: 4px;
+    }
+  }
+
+  img.brand {
+    max-height: $header-content-height;
+    max-width: 72px;
     background-color: #000;
   }
 
